--- a/.github/workflows/aws-using-oidc.yaml
+++ b/.github/workflows/aws-using-oidc.yaml
@@ -7,7 +7,21 @@ jobs:
   test:
     name: Login to AWS using OIDC
     runs-on: ubuntu-latest
+    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      AWS_ROLE: "github-aws-experiment-role"
+      
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-    - run: ls -la
+      uses: actions/checkout@v4
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.AWS_ROLE }}
+        aws-region: ${{ env.AWS_DEFAULT_REGION }}
+    - run: aws s3 ls
